added functional test excercise and homepage html

--- a/src/main/resources/templates/EditProduct.html
+++ b/src/main/resources/templates/EditProduct.html
@@ -20,7 +20,7 @@
             <label for="quantityInput">Quantity</label>
             <input th:field="*{productQuantity}" type="text" class="form-control mb-4 col-4" id="quantityInput" placeholder="Enter product quantity">
         </div>
-        <button type="submit" class="btn btn-primary">Update</button>
+        <button type="submit" id="update" class="btn btn-primary">Update</button>
     </form>
 </div>
 
