--- a/src/main/resources/templates/ProductList.html
+++ b/src/main/resources/templates/ProductList.html
@@ -9,7 +9,7 @@
 
 <div class="container my-2">
     <h2>Product List</h2>
-    <a th:href="@{/product/create}" class="btn btn-primary btn-sm mb-3">Create Product</a>
+    <a th:href="@{/product/create}" id="create" class="btn btn-primary btn-sm mb-3">Create Product</a>
 
     <table border="1" class="table table-striped table-responsive-md">
         <thead>
@@ -24,8 +24,8 @@
             <td th:text="${product.productName}"></td>
             <td th:text="${product.productQuantity}"></td>
             <td>
-                <a th:href="@{/product/edit/{id}(id=${product.productId})}" class="btn btn-info btn-sm">Edit</a>
-                <a th:href="@{/product/delete/{id}(id=${product.productId})}" class="btn btn-warning btn-sm">Delete</a>
+                <a th:href="@{/product/edit/{id}(id=${product.productId})}" id= "edit" class="btn btn-info btn-sm">Edit</a>
+                <a th:href="@{/product/delete/{id}(id=${product.productId})}" id= "delete" class="btn btn-warning btn-sm">Delete</a>
 
             </td>
         </tr>
