--- a/src/main/resources/templates/ProductList.html
+++ b/src/main/resources/templates/ProductList.html
@@ -11,7 +11,8 @@
     <h2>Product List</h2>
     <a th:href="@{/product/create}" id="create" class="btn btn-primary btn-sm mb-3">Create Product</a>
 
-    <table border="1" class="table table-striped table-responsive-md">
+    <table  border="1" class="table table-striped table-responsive-md">
+        <caption> Product List </caption>
         <thead>
         <tr>
             <th scope="col">Product Name</th>
